add live api url

--- a/appsettings.json
+++ b/appsettings.json
@@ -11,5 +11,5 @@
   "EncKey": "Fr!d00M0pHa$e2er",
   "Secretkey": "Fr!d00Mf0r0th3r",
   "ApiKey": "dIsH19Tv0724",
-  "_ApiurlPlanOffer": "https://beta-ottapis.dishtv.in/api/PlansAndOffer/"
+  "_ApiurlPlanOffer": "https://ottapis.dishtv.in/api/PlansAndOffer/"
 }
